// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 01 (null) 1`] = `null`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 02 ({}) 1`] = `null`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Object {
    "color": "red @",
    "margin": "0 @",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Object {
    "color": "red @[0]",
  },
  Object {
    "margin": "0 @[1]",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Object {
    "color": "red @[0]",
  },
  Object {
    "color": "blue @[2]/$native",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Object {
    "color": "red @",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 08 atomizeRuleset({$web: atomizeRuleset({ :hover color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Object {
    "color": "green @",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 11 with theme 1`] = `
Array [
  Object {
    "backgroundColor": "darkgreen @[0]",
    "color": "white @[0]",
  },
  Object {
    "backgroundColor": "lightblue @[2]/$native",
    "color": "black @[2]/$native",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Object {
    "color": "blue @[0]",
  },
  Object {
    "color": "green @[2]/$native",
  },
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 2`] = `
Array [
  Object {
    "color": "blue",
  },
  false,
  [Function],
]
`;

exports[`SHEETER SIMPLE RULESET ## NATIVE ## 15 just $hot 1`] = `
Array [
  Object {
    "color": "green @[0]",
  },
  "DEFFERED",
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 01 (null) 1`] = `null`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 02 ({}) 1`] = `null`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    ".a { color:red } @",
    ".b { margin:0 } @",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    ".a { color:red } @[0]",
  ],
  Array [
    ".b { margin:0 } @[1]",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    ".a { color:red } @[0]",
  ],
  Array [
    ".b { color:green } @[1]/$web",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    ".a { color:red } @",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 08 atomizeRuleset({$web: atomizeRuleset({ :hover color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    ".a:hover { color:red } @/:hover",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 11 with theme 1`] = `
Array [
  Array [
    ".a { color:white } @[0]",
    ".b { background-color:darkgreen } @[0]",
  ],
  Array [
    ".c { color:black } @[1]/$web",
    ".d { background-color:lightblue } @[1]/$web",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    ".a { color:blue } @[0]",
  ],
  Array [
    ".b { color:red } @[1]/$web",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 12 ATOMIZE modifies source object 2`] = `
Array [
  Object {
    "color": "blue",
  },
  [Function],
  false,
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 13 condition in pseudo 1`] = `
Array [
  Array [
    ".a:hover { color:red } @/$web/:hover/$web",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 14 mix in pseudo array 1`] = `
Array [
  Array [
    ".c { color:green } @/$web",
  ],
  Array [
    ".a:hover { color:blue } @/$web/:hover[0]",
  ],
  Array [
    ".b:hover:active { color:red } @/$web/:hover[1]/$web/:active",
  ],
]
`;

exports[`SHEETER SIMPLE RULESET ## WEB ## 15 just $hot 1`] = `
Array [
  Array [
    ".a { color:green } @[0]",
  ],
  "DEFFERED",
]
`;
